# kiro_real_estate

./: .env.example  .gitignore  API_USAGE_GUIDE.md  BACKEND_API_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SECURITY.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  gmail-lead-sync.service  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  sample_test_email.txt  setup_env.sh  test_connection.py  test_template.txt  test_template_body.txt  test_template_body_updated.txt  test_watcher_simple.py
.github/workflows/: ci.yml
.kiro/hooks/: auto-push-on-agent-stop.kiro.hook  auto-push-on-task-complete.kiro.hook
api/: .env.example  README.md  __init__.py  auth.py  config.py  exceptions.py  main.py
api/dependencies/: __init__.py  agent_auth.py  auth.py  db.py  pagination.py
api/models/: __init__.py  agent_models.py  audit_models.py  company_models.py  error_models.py  health_models.py  lead_models.py  lead_source_models.py  settings_models.py  template_models.py  watcher_models.py  web_ui_models.py
api/repositories/: __init__.py  agent_repository.py  audit_repository.py  buyer_leads_repository.py  company_repository.py  credential_repository.py  lead_repository.py  lead_source_repository.py  settings_repository.py  template_repository.py  watcher_repository.py
api/routers/: __init__.py  admin_agents.py  admin_audit.py  admin_auth.py  admin_buyer_leads.py  admin_companies.py  admin_lead_sources.py  admin_leads.py  admin_settings.py  admin_templates.py  admin_watchers.py  agent_account.py  agent_auth.py  agent_dashboard.py  agent_leads.py  agent_onboarding.py  agent_reports.py  agent_settings.py  public_health.py  public_submission.py
api/routes/: agents.py  audit.py  auth.py  buyer_leads.py  companies.py  health.py  (+3 more)
deployment/: gmail-lead-sync.service
docs/: API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  BACKEND_COMPLETION_SUMMARY.md  CLEAN_CLONE_VALIDATION.md  DEPLOYMENT.md  FRONTEND_IMPLEMENTATION_PLAN.md  TESTING_GAPS.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
gmail_lead_sync/: __init__.py  __main__.py  agent_models.py  credentials.py  error_handling.py  health.py  lead_event_utils.py  logging_config.py  models.py  parser.py  rate_limiter.py  responder.py  validation.py  watcher.py
migrations/: env.py
scripts/: README.md  generate_secrets.sh  seed_data.py  seed_test_preapproval.py  validate_clean_clone.sh
tests/: __init__.py  conftest.py
(+330 files in other folders)
