[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-lead-sync"
version = "0.1.0"
description = "Gmail Lead Sync & Response Engine - A lead management system for Real Estate agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Real Estate MVP Team"}
]
keywords = ["gmail", "lead", "sync", "real-estate", "imap", "smtp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "SQLAlchemy>=2.0.0",
    "Alembic>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic[email]",
    "cryptography>=41.0.0",
    "hypothesis>=6.90.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.scripts]
gmail-lead-sync = "gmail_lead_sync.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gmail_lead_sync*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# SQLAlchemy Column types are not fully typed; suppress those errors
disable_error_code = [
    "assignment", "arg-type", "return-value", "var-annotated", "misc",
    "valid-type", "no-any-return", "call-overload", "union-attr", "dict-item",
    "operator", "import-untyped", "attr-defined", "str-bytes-safe",
    "no-untyped-def", "has-type", "index",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=gmail_lead_sync --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["gmail_lead_sync"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
